@@ -62,6 +62,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc5639.suite',
      'tests.test_rfc5649.suite',
      'tests.test_rfc5652.suite',
+     'tests.test_rfc5697.suite',
      'tests.test_rfc5751.suite',
      'tests.test_rfc5753.suite',
      'tests.test_rfc5755.suite',
